feat: implement the egress by the trait sidecar
